test/compilable/test3254b.d
module test3254b;

import imports.test3254b;

void foo()
{
    bar(0);
}
