test/fail_compilation/fail103.d
void foo()
{
    scope(success)
	return 0;
}
